## 5.0.0

* Drop the concepts of:
    - core_modules
    - core_plugins
    - mandatory_modules
    - external_modules