@@ -1,19 +1,0 @@
-notifications = {
-    'dryrun_complete': 0,
-}
-
-errors = {
-    'could_not_create_virtualenv': 1,
-    'virtualenv_already_exists': 2,
-    'could_not_download_file': 3,
-    'missing_cloudify_agent_config': 4,
-    'could_not_uninstall_module': 5,
-    'could_not_install_module': 6,
-    'failed_to_create_tar': 7,
-    'could_not_identify_distribution': 8,
-    'tar_already_exists': 9,
-    'installation_validation_failed': 10,
-    'could_not_access_config_file': 11,
-    'invalid_yaml_file': 12,
-    'could_not_install_from_requirements_file': 13,
-}
